--- a/content/posts/20230728.md
+++ b/content/posts/20230728.md
@@ -1,7 +1,7 @@
 ---
 title: "Changing VRChat cache settings"
 date: 2023-07-27
-categories: [VR, VRChat]
+categories: [VRChat]
 ---
 
 By default, cache is limited to 20GB and is located in your user account (%AppData%..\LocalLow\VRChat\vrchat).
