--- a/content/posts/20230803.md
+++ b/content/posts/20230803.md
@@ -1,7 +1,7 @@
 ---
 title: "3D printed microphone fixation for my Beyerdynamic headset"
 date: 2023-08-03
-categories: [3DPrint]
+categories: [3D Printing]
 ---
 
 I just published on [Thingiverse](https://www.thingiverse.com/thing:6153001) my solution to fix my [Shure WH20](https://www.thomann.de/fr/shure_wh20xlr.htm) microphone on my [Beyerdynamic DT 700 PRO X](https://www.thomann.de/fr/beyerdynamic_dt_700_pro_x.htm) headset.
