--- a/content/posts/20230807.md
+++ b/content/posts/20230807.md
@@ -1,7 +1,7 @@
 ---
 title: "4U 19 inches adapter for 40-i profiles"
 date: 2023-08-07
-categories: [3DPrint, HomeCockpit]
+categories: [3D Printing, Home Cockpit]
 ---
 
 It took me a while to publish it, but finally you can find on [Thingiverse](https://www.thingiverse.com/thing:6160093) my solution to mount 19 inches rack units under 40-type-I profiles.
