Fixing small wrong things about onedrive

--- a/content/posts/20230908.md
+++ b/content/posts/20230908.md
@@ -42,7 +42,7 @@ I want it to work even in the case of network failure (local mode).
 
 OneDrive propose something really afordable, especially with Microsoft 365 Family offers (1TB/account).
 
-Having two copies (one local, one remote) without versionning is sufficient in term of backups for the documents I have on my Windows machine (I put them on my Linux machine via SAMBA if they're important).
+Having two copies (one local, one remote) with simple versionning (kept 30 days if I understood well) is sufficient in term of backups for the documents I have on my Windows machine (I put them on my Linux machine via SAMBA if they're really important).
 
 ### Special Folders
 
